--- a/src/components/reusables/CButton/CButton.module.scss
+++ b/src/components/reusables/CButton/CButton.module.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/variables.scss";
+@use "@styles/variables.scss" as variables;
 
 .custom_button {
   display: flex;
@@ -7,16 +7,16 @@
   justify-content: center;
   transition: all 0.4s ease;
   background-color: transparent;
-  color: $color-text-primary;
+  color: variables.$text-primary-color;
   white-space: nowrap;
   letter-spacing: 0.04em;
   border-radius: 4px;
-  border-color: $color-dark-primary;
+  border-color: variables.$primary-color-dark;
   line-height: 20px;
   height: 42px;
   box-sizing: border-box;
   border: none;
-  font-family: $font-primary;
+  font-family: variables.$font-primary;
   font-size: 13px;
   font-weight: 600;
   padding: 0 2rem;
@@ -79,7 +79,11 @@
 
   &._gradient {
     &._info {
-      background: linear-gradient(95deg, $color-orange 0%, #100e17 100%);
+      background: linear-gradient(
+        95deg,
+        variables.$primary-orange 0%,
+        #100e17 100%
+      );
       &:hover {
         opacity: 0.7;
       }
@@ -88,8 +92,8 @@
     &._primary {
       background: linear-gradient(
         95deg,
-        $color-dark-primary 0%,
-        $color-primary 100%
+        variables.$primary-color-dark 0%,
+        variables.$primary-color 100%
       );
       &:hover {
         opacity: 0.7;
@@ -97,7 +101,11 @@
     }
 
     &._warn {
-      background: linear-gradient(95deg, $color-red 0%, #100e17 100%);
+      background: linear-gradient(
+        95deg,
+        variables.$primary-red 0%,
+        #100e17 100%
+      );
       &:hover {
         opacity: 0.7;
       }
@@ -105,27 +113,27 @@
   }
 
   &._info {
-    background-color: $color-orange;
-    border: 1px solid $color-orange;
+    background-color: variables.$primary-orange;
+    border: 1px solid variables.$primary-orange;
     &:hover {
       cursor: pointer;
-      background-color: rgba($color-orange, 0.7);
+      background-color: rgba(variables.$primary-orange, 0.7);
     }
   }
 
   &._primary {
-    background-color: $color-primary;
-    border: 1px solid $color-primary;
+    background-color: variables.$primary-color;
+    border: 1px solid variables.$primary-color;
     &:hover {
-      background-color: rgba($color-primary, 0.7);
+      background-color: rgba(variables.$primary-color, 0.7);
     }
   }
 
   &._warn {
-    background-color: $color-red;
-    border: 1px solid $color-red;
+    background-color: variables.$primary-red;
+    border: 1px solid variables.$primary-red;
     &:hover {
-      background-color: rgba($color-red, 0.7);
+      background-color: rgba(variables.$primary-red, 0.7);
     }
   }
 
@@ -145,7 +153,7 @@
     background-color: transparent !important;
 
     &:hover {
-      background-color: $color-primary !important;
+      background-color: variables.$primary-color !important;
       color: black;
       opacity: 1;
     }
