--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -32,6 +32,7 @@ $primary-green: #02c9a5;
 $primary-orange: #f39718;
 $primary-red: #f04438;
 $primary-color: #ffe878;
+$primary-modal: rgba(255, 255, 255, 0.1);
 $primary-color-dark: #eeb91d;
 
 // 3. Content Colors
@@ -47,7 +48,7 @@ $content-light-gray: #eff7f6;
 $background-white: #fcfcfc;
 $background-black: #00100d;
 $background-gray: #00100dcc;
-$background-modal: rgba(0, 0, 0, 0.5);
+$background-modal: rgba(0, 0, 0, 0.2);
 $background-dark-gray: #24262a;
 $background-light-gray: #363a41;
 $background-input: #0b0b0b5c;
