--- a/src/components/home/hero/Hero.module.scss
+++ b/src/components/home/hero/Hero.module.scss
@@ -1,31 +1,31 @@
 .heroContainer {
-    @apply w-full max-w-[80rem] lg:max-w-[90rem] relative text-white p-4 md:p-[2rem] py-[4rem] rounded-2xl h-auto;
+  @apply w-full max-w-[80rem] lg:max-w-[90rem] relative text-white p-4 md:p-[2rem] py-[4rem] rounded-2xl h-auto;
 }
 
 .bgContainer {
-    @apply absolute top-0 right-0 w-full h-full;
+  @apply absolute right-0 w-full h-full;
 }
 
 .imageContainer {
-    @apply absolute top-0 left-0 w-full h-[50rem] rounded-[2rem];
+  @apply absolute left-0 w-full h-[50rem] rounded-[2rem];
 }
 
 .image {
-    @apply w-full z-[2] h-full rounded-[2rem];
+  @apply w-full z-[2] h-full rounded-[2rem];
 }
 
 .content {
-    @apply flex flex-col relative z-[2] items-center gap-8;
+  @apply flex flex-col relative z-[2] items-center gap-8;
 }
 
 .title {
-    @apply text-2xl md:text-[3.5rem] md:leading-[5rem] text-center font-semibold uppercase;
+  @apply text-2xl mt-5 md:text-[3.5rem] md:leading-[5rem] text-center font-semibold uppercase;
 }
 
 .description {
-    @apply text-center;
+  @apply text-center;
 }
 
 .formContainer {
-    @apply w-full relative top-[-10rem] md:top-[-5rem] min-h-[50rem];
+  @apply w-full relative top-[-10rem] min-h-[50rem];
 }
