--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -27,6 +27,7 @@ $font-primary: "Sora", sans-serif;
 // ---------
 $white: #ffffff;
 $black: #000000;
+$transparent: #00000000;
 $primary-blue: #01396c;
 $primary-green: #02c9a5;
 $primary-orange: #f39718;
