fix: swap form tap

--- a/src/components/home/hero/Hero.module.scss
+++ b/src/components/home/hero/Hero.module.scss
@@ -19,7 +19,7 @@
 }
 
 .title {
-  @apply text-2xl mt-5 md:text-[3.5rem] md:leading-[5rem] text-center font-semibold uppercase;
+  @apply text-[1.5rem] mt-5 md:text-[2.5rem] lg:text-[3.5rem] md:leading-[5rem] text-center font-semibold uppercase;
 }
 
 .description {
